# crypto

./: .gitignore  CMakeLists.txt  main.py
.github/: copilot-instructions.md
bignum/: CMakeLists.txt
bignum/include/bignum/: bignum.hpp
bignum/src/: bignum.cpp
crypto_lib/: CMakeLists.txt
crypto_lib/include/: crypto_lib.hpp  discrete_log.hpp
crypto_lib/include/crypto_lib/: diffie_hellman.hpp
crypto_lib/src/: crypto_lib.cpp  discrete_log.cpp  prime_utils.cpp
doc/benchmarks/: bignum_bench_time_karatsuba1.txt  bignum_bench_time_simd1.txt  bignum_bench_time_simd2.txt
solver/: CMakeLists.txt  main.cpp  task1.cpp  task2.cpp
task1-3/: .gitignore  CMakeLists.txt  README.md
task1-3/bignum/src/: bignum.cpp
task1-3/crypto_lib/: CMakeLists.txt
task1-3/crypto_lib/include/: crypto_lib.hpp
task1-3/crypto_lib/src/: crypto_lib.cpp  diffie_hellman.cpp
task1-3/doc/benchmarks/: bignum_bench_cache.csv  bignum_bench_memory.csv  bignum_bench_time.csv  plot_benchmarks.py
task1-3/solver/: CMakeLists.txt  main.cpp  task3.cpp
task1-3/tests/: CMakeLists.txt  crypto_lib_tests.cpp  dh_tests.cpp
task4-/: CMakeLists.txt
task4-/crypto_lib_boost/: CMakeLists.txt
task4-/crypto_lib_boost/include/crypto_lib_boost/: bignum.hpp  elgamal_cipher.hpp  file_handler.hpp  prime_utils.hpp  rsa_cipher.hpp  sha256.hpp  shamir_cipher.hpp  signature_interface.hpp  vernam_cipher.hpp
task4-/crypto_lib_boost/src/: dsa_signature.cpp  elgamal_cipher.cpp  elgamal_signature.cpp  file_handler.cpp  gost_signature.cpp  prime_utils.cpp  rsa_cipher.cpp  rsa_signature.cpp  sha256.cpp  shamir_cipher.cpp  signature_placeholders.cpp  signature_stubs.cpp  vernam_cipher.cpp
task4-/solver/: CMakeLists.txt  task4-7.cpp  task8-11.cpp
task4-/tests/: CMakeLists.txt  dsa_signature_test.cpp  elgamal_signature_test.cpp  elgamal_test.cpp  gost_signature_test.cpp  rsa_signature_test.cpp  rsa_test.cpp  shamir_negative_test.cpp  shamir_test.cpp  vernam_alice_bob_test.cpp  vernam_test.cpp
tests/: CMakeLists.txt  bignum_bench.cpp  bignum_tests.cpp  discrete_log_tests.cpp
